--- a/DuszyczkiPunankiApi/Properties/launchSettings.json
+++ b/DuszyczkiPunankiApi/Properties/launchSettings.json
@@ -12,7 +12,7 @@
       "commandName": "Project",
       "dotnetRunMessages": true,
       "launchBrowser": false,
-      "applicationUrl": "http://localhost:5180",
+      "applicationUrl": "http://localhost:5180;http://192.168.0.178:5180",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
