--- a/DuszyczkiPunankiApi/appsettings.json
+++ b/DuszyczkiPunankiApi/appsettings.json
@@ -5,5 +5,11 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "Jwt": {
+    "Key": ""
+  },
+  "ConnectionStrings": {
+    "Database" : ""
+  },
   "AllowedHosts": "*"
 }
